Includes index2.html

--- a/5-4WrittingHTML/index2.html
+++ b/5-4WrittingHTML/index2.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html> <html> <head> <!-- This is the title of the page -->
+<!DOCTYPE html> <html> <head>
+ <!-- This is the title of the page -->
         <tittle style="font-family: Verdana"> My Top 5 Sport companies and more</tittle>
  
 </head>
